# RealEstayer

backend/: .gitignore  Cargo.toml
backend/src/: database.rs  main.rs  model.rs  routes.rs
rust-scraper/: .gitattributes  .gitignore  Cargo.toml
rust-scraper/logs/: realestayer-scraper.log.2024-11-17
rust-scraper/src/: database.rs  main.rs  models.rs  routes.rs  scraping.rs
scraper/: .gitignore  config.py  db.py  main.py  requirements.txt  start.bat
web/: .gitignore  README.md  angular.json  package-lock.json  package.json
web/src/: index.html
web/src/app/: app.component.spec.ts  app.component.ts  app.module.ts  app.routes.ts  city-data.service.ts  listings.service.ts
web/src/app/city-data/: city-data.component.ts
web/src/app/listings/: listings.component.html  listings.component.sass  listings.component.ts
web/src/app/scrape-city-data/: scrape-city-data.component.html  scrape-city-data.component.sass  scrape-city-data.component.spec.ts  scrape-city-data.component.ts
