[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio-stream = "0.1.15"
futures = "0.3.30"
tokio = { version = "1.38.0", features = ["rt", "rt-multi-thread", "macros"] }
serde_derive = "1.0.204"
serde_json = "1.0.120"
http = "1.1.0"
rand = "0.9.0-alpha.1"
mongodb = "3.0.1"
axum = "0.7.5"
titlecase = "3.3.0"
lettre = "0.11.7"
mail-send = "0.4.9"
