[package]
name = "rust-scraper"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4.22"
tracing-subscriber = "0.3.18"
tracing = "0.1.40"
tracing-appender = "0.2.3"
tokio = "1.41.1"
axum = "0.8.0-alpha.1"
tower-http = { version = "0.6.1", features = ["trace", "cors"] }
axum-server = { version = "0.7.1", features = ['tls-rustls'] }