[package]
name = "rust-scraper"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4.22"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tracing = "0.1.40"
tracing-appender = "0.2.3"
tokio = { version = "1.41.1", features = ["full", "rt-multi-thread"] }
axum = "0.8.0-alpha.1"
tower-http = { version = "0.6.1", features = ["trace", "cors"] }
axum-server = { version = "0.7.1", features = ['tls-rustls'] }
tokio-stream = "0.1"
serde = { version = "1.0.215", features = ["derive"] }
anyhow = "1.0.93"
serde_json = "1.0.133"
thirtyfour = "0.34.0"  # Selenium WebDriver client for Rust
url = "2.5.3"
urlencoding = "2.1.3"
futures = "0.3.31"
selenium-rs = "0.1.2"
mongodb = "3.1.0"
reqwest = "0.9.24"
fastrand = "2.2.0"
